tests/baselines/reference/tupleTypes.errors.txt
tests/cases/compiler/tupleTypes.ts(14,1): error TS2322: Type '[]' is not assignable to type '[number, string]'.
  Property '0' is missing in type '[]'.
tests/cases/compiler/tupleTypes.ts(15,1): error TS2322: Type '[number]' is not assignable to type '[number, string]'.
  Property '1' is missing in type '[number]'.
tests/cases/compiler/tupleTypes.ts(17,1): error TS2322: Type '[string, number]' is not assignable to type '[number, string]'.
  Type 'string' is not assignable to type 'number'.
tests/cases/compiler/tupleTypes.ts(25,1): error TS2322: Type '[number]' is not assignable to type '[]'.
  Types of property 'pop' are incompatible.
    Type '() => number' is not assignable to type '() => never'.
      Type 'number' is not assignable to type 'never'.
tests/cases/compiler/tupleTypes.ts(48,1): error TS2322: Type '[]' is not assignable to type '[number, string]'.
tests/cases/compiler/tupleTypes.ts(55,1): error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
  Types of property 'pop' are incompatible.
    Type '() => string | number' is not assignable to type '() => number'.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
tests/cases/compiler/tupleTypes.ts(57,1): error TS2322: Type '[number, {}]' is not assignable to type 'number[]'.
  Types of property 'pop' are incompatible.
    Type '() => number | {}' is not assignable to type '() => number'.
      Type 'number | {}' is not assignable to type 'number'.
        Type '{}' is not assignable to type 'number'.
tests/cases/compiler/tupleTypes.ts(59,1): error TS2322: Type '[number, number]' is not assignable to type '[number, string]'.
  Type 'number' is not assignable to type 'string'.
tests/cases/compiler/tupleTypes.ts(60,1): error TS2322: Type '[number, {}]' is not assignable to type '[number, string]'.
  Type '{}' is not assignable to type 'string'.
tests/cases/compiler/tupleTypes.ts(61,1): error TS2322: Type '[]' is not assignable to type '[number, string]'.
tests/cases/compiler/tupleTypes.ts(64,1): error TS2322: Type '[]' is not assignable to type '[number, {}]'.
  Property '0' is missing in type '[]'.
tests/cases/compiler/tupleTypes.ts(65,1): error TS2322: Type '[number, string]' is not assignable to type '[]'.
  Types of property 'pop' are incompatible.
    Type '() => string | number' is not assignable to type '() => never'.
      Type 'string | number' is not assignable to type 'never'.
        Type 'string' is not assignable to type 'never'.


==== tests/cases/compiler/tupleTypes.ts (12 errors) ====
    var v1: [];
    var v2: [number];
    var v3: [number, string];
    var v4: [number, [string, string]];
    
    var t: [number, string];
    var t0 = t[0];   // number
    var t0: number;
    var t1 = t[1];   // string
    var t1: string;
    var t2 = t[2];   // number|string
    var t2: number|string;
    
    t = [];               // Error
    ~
!!! error TS2322: Type '[]' is not assignable to type '[number, string]'.
!!! error TS2322:   Property '0' is missing in type '[]'.
    t = [1];              // Error
    ~
!!! error TS2322: Type '[number]' is not assignable to type '[number, string]'.
!!! error TS2322:   Property '1' is missing in type '[number]'.
    t = [1, "hello"];     // Ok
    t = ["hello", 1];     // Error
    ~
!!! error TS2322: Type '[string, number]' is not assignable to type '[number, string]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    t = [1, "hello", 2];  // Ok
    
    var et: [];
    var et0 = et[0];  // never
    var et0: never;
    
    et = [];    // Ok
    et = [1];   // Error
    ~~
!!! error TS2322: Type '[number]' is not assignable to type '[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => number' is not assignable to type '() => never'.
!!! error TS2322:       Type 'number' is not assignable to type 'never'.
    
    var tf: [string, (x: string) => number] = ["hello", x => x.length];
    
    declare function ff<T, U>(a: T, b: [T, (x: T) => U]): U;
    var ff1 = ff("hello", ["foo", x => x.length]);
    var ff1: number;
    
    function tuple2<T0, T1>(item0: T0, item1: T1): [T0, T1]{
        return [item0, item1];
    }
    
    var tt = tuple2(1, "string");
    var tt0 = tt[0];
    var tt0: number;
    var tt1 = tt[1];
    var tt1: string;
    var tt2 = tt[2];
    var tt2: number | string;
    
    tt = tuple2(1, undefined);
    tt = [1, undefined];
    tt = [undefined, undefined];
    tt = [];  // Error
    ~~
!!! error TS2322: Type '[]' is not assignable to type '[number, string]'.
    
    var a: number[];
    var a1: [number, string];
    var a2: [number, number];
    var a3: [number, {}];
    var a4: [];
    a = a1;   // Error
    ~
!!! error TS2322: Type '[number, string]' is not assignable to type 'number[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => string | number' is not assignable to type '() => number'.
!!! error TS2322:       Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:         Type 'string' is not assignable to type 'number'.
    a = a2;
    a = a3;   // Error
    ~
!!! error TS2322: Type '[number, {}]' is not assignable to type 'number[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => number | {}' is not assignable to type '() => number'.
!!! error TS2322:       Type 'number | {}' is not assignable to type 'number'.
!!! error TS2322:         Type '{}' is not assignable to type 'number'.
    a = a4;
    a1 = a2;  // Error
    ~~
!!! error TS2322: Type '[number, number]' is not assignable to type '[number, string]'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    a1 = a3;  // Error
    ~~
!!! error TS2322: Type '[number, {}]' is not assignable to type '[number, string]'.
!!! error TS2322:   Type '{}' is not assignable to type 'string'.
    a1 = a4;  // Error
    ~~
!!! error TS2322: Type '[]' is not assignable to type '[number, string]'.
    a3 = a1;
    a3 = a2;
    a3 = a4;  // Error
    ~~
!!! error TS2322: Type '[]' is not assignable to type '[number, {}]'.
!!! error TS2322:   Property '0' is missing in type '[]'.
    a4 = a1;  // Error
    ~~
!!! error TS2322: Type '[number, string]' is not assignable to type '[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => string | number' is not assignable to type '() => never'.
!!! error TS2322:       Type 'string | number' is not assignable to type 'never'.
!!! error TS2322:         Type 'string' is not assignable to type 'never'.
    